--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "pinia": "^3.0.4",
     "vue": "^3.5.13",
     "vue-i18n": "^11.1.1",
+    "vue-qrcode": "^2.2.2",
     "vue-router": "^4.5.0"
   },
   "devDependencies": {
